kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes
  namespace: notes
spec:
  selector:
    app: notes
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: notes
    protocol: TCP
    port: 80
    targetPort: 80
